Added properties for grid modules
SVN-Revision: 2240

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -3,6 +3,8 @@ codegen.validator.dir=${codegen.dir}/validator
 system.dir=system
 writable-api.dir=writable-api
 security.dir=${system.dir}/security
+grid-remoting.dir=grid/grid-remoting
+grid-jaas.dir=grid/grid-jaas
 
 file.prefix=caCORE_SDK_401
 release.dir=release
@@ -27,14 +29,18 @@ system.config.client.local.dir=${system.config.dir}/package/local-client
 system.config.client.remote.dir=${system.config.dir}/package/remote-client
 system.config.client.webapp.dir=${system.config.dir}/package/webapp
 system.config.client.ws.dir=${system.config.dir}/package/ws-client
+system.config.client.grid-jaas.dir=${system.config.dir}/package/grid-jaas
 system.config.security.dir=${system.config.dir}/security
 system.config.web.classes.dir=${system.config.dir}/web/WEB-INF/classes
-
-output.conf.dir=${output.project.dir}/conf
 output.codegen.config.dir=${output.project.dir}/${codegen.config.dir}
 output.codegen.validator.config.dir=${output.codegen.config.dir}/validator
 codegen.config.file=CodegenConfig.xml
 codegen.config.validator.file=ValidatorCodegenConfig.xml
+
+system.config.grid.loginService.dir=${system.config.dir}/grid-login-service
+system.config.grid.loginService.webinf.dir=${system.config.grid.loginService.dir}/WEB-INF
+system.config.grid.loginService.web.classes.dir=${system.config.grid.loginService.webinf.dir}/classes
+
 
 build.dir=${output.project.dir}/build
 build.conf.system.web.dir=${output.conf.dir}/system/web
@@ -44,6 +50,9 @@ build.jar.dir=${build.dir}/jar
 build.doc.dir=${build.dir}/docs
 
 package.dir=${output.project.dir}/package
+package.client.server.dir=${package.dir}/server
+package.client.jboss.dir=${package.client.server.dir}/jboss
+package.client.tomcat.dir=${package.client.server.dir}/tomcat
 package.client.remote.dir=${package.dir}/remote-client
 package.client.remote.lib.dir=${package.client.remote.dir}/lib
 package.client.remote.conf.dir=${package.client.remote.dir}/conf
@@ -54,6 +63,9 @@ package.client.ws.dir=${package.dir}/ws-client
 package.client.ws.lib.dir=${package.client.ws.dir}/lib
 package.client.ws.conf.dir=${package.client.ws.dir}/conf
 package.system.dir=${package.dir}/webapp
+package.client.grid-jaas.dir=${package.dir}/grid-jaas
+package.client.grid-jaas.lib.dir=${package.client.grid-jaas.dir}/lib
+package.client.grid-jaas.conf.dir=${package.client.grid-jaas.dir}/conf
 
 bean.file=${PROJECT_NAME}-beans.jar
 orm.file=${PROJECT_NAME}-orm.jar
