Added commented properties, Added grid-jaas properties
SVN-Revision: 2244

--- a/SDK4/system/security/build.properties
+++ b/SDK4/system/security/build.properties
@@ -1,4 +1,9 @@
+#sdk.home=${basedir}/../..
+#lib.dir=${sdk.home}/lib
 system.dir=../
+
+grid-jaas.home=${basedir}/../../grid/grid-jaas
+grid-jaas.classes.dir=${grid-jaas.home}/build/classes
 
 src.dir=src
 build.dir=build
