--- a/SDK4/system/security/build.xml
+++ b/SDK4/system/security/build.xml
@@ -20,6 +20,7 @@
 		<fileset dir="${system.dir}\${system.lib.dir}">
 			<include name="*.jar" />
 		</fileset>
+		<path location="${grid-jaas.classes.dir}"/>
 	</path>
 
 	<!-- set basedir.url = basedir as unix style pathname, regardless of platform -->
@@ -68,7 +69,12 @@
 	<!--***********************************************************************
 	*** Compiles source code
 	*********************************************************************** -->
-	<target name="compile" depends="init" description="Compiles source code">
+	<target name="grid-jaas-compile" >
+		<SDKecho message="${ant.project.name}: Executing Grid-JAAS Project"/>
+		<ant antfile="${grid-jaas.home}/build.xml" target="dist" inheritall="false" inheritrefs="false" />
+	</target>
+
+	<target name="compile" depends="init,grid-jaas-compile" description="Compiles source code">
 		<SDKecho message="${ant.project.name}: Compiling source code"/>
 		<javac srcdir="${src.dir}" destdir="${build.classes.dir}" debug="true">
 			<classpath refid="classpath"/>
