Properties for configuring grid authentication
SVN-Revision: 2262

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -285,3 +285,16 @@ GENERATE_HIBERNATE_VALIDATOR=true
 #  User can choose to specify any absolute path for the cache files
 ##################################################################################
 CACHE_PATH=java.io.tmpdir
+
+
+##################################################################################
+#  CAGRID AUTHENTICATION PROPERTIES
+#
+##################################################################################
+CAGRID_AUTHENTICATION_SERVICE_URL=https://localhost:18443/wsrf/services/cagrid/Dorian
+CAGRID_DORIAN_SERVICE_URL=https://localhost:18443/wsrf/services/cagrid/Dorian
+SDK_GRID_LOGIN_SERVICE_NAME=SDKGridLoginService
+SDK_GRID_LOGIN_SERVICE_URL=http://localhost:8080/${SDK_GRID_LOGIN_SERVICE_NAME}
+ENABLE_GRID_LOGIN_MODULE=false
+ENABLE_CSM_LOGIN_MODULE=true
+CAGRID_LOGIN_MODULE_NAME=grid
