--- a/SDK4/build.xml
+++ b/SDK4/build.xml
@@ -14,7 +14,8 @@
 	<property file="${system.dir}/build.properties" prefix="system"  />
 	<property file="${writable-api.dir}/build.properties" prefix="writable-api"  />
 	<property file="${security.dir}/build.properties" prefix="security"  />
-	
+	<property file="${grid-remoting.dir}/build.properties" prefix="grid-remoting"  />
+	<property file="${grid-jaas.dir}/build.properties" prefix="grid-jaas"  />
 	<!--***********************************************************************
 	*** Import utility script
 	*********************************************************************** -->
@@ -329,6 +330,53 @@
 			<equals arg1="${ENABLE_CLM_LOGGER_CFG_GENERATION}" arg2="false" casesensitive="false" trim="true" />
 		</and>
 	</condition>
+
+	
+	<condition property="GRID_LOGIN_MODULE_START" value="${xml.comment.start}" else="">
+		<and>
+			<not>
+				<or>
+					<equals arg1="${ENABLE_GRID_LOGIN_MODULE}" arg2="true" casesensitive="false" trim="true" />
+					<equals arg1="${ENABLE_GRID_LOGIN_MODULE}" arg2="yes" casesensitive="false" trim="true" />
+				</or>
+			</not>
+			<equals arg1="${SECURITY_ENABLED}" arg2="true" casesensitive="false" trim="true" />
+		</and>
+	</condition>
+	<condition property="GRID_LOGIN_MODULE_END" value="${xml.comment.end}" else="">
+		<and>
+			<not>
+				<or>
+					<equals arg1="${ENABLE_GRID_LOGIN_MODULE}" arg2="true" casesensitive="false" trim="true" />
+					<equals arg1="${ENABLE_GRID_LOGIN_MODULE}" arg2="yes" casesensitive="false" trim="true" />
+				</or>
+			</not>
+			<equals arg1="${SECURITY_ENABLED}" arg2="true" casesensitive="false" trim="true" />
+		</and>
+	</condition>
+
+	<condition property="CSM_LOGIN_MODULE_START" value="${xml.comment.start}" else="">
+		<and>
+			<not>
+				<or>
+					<equals arg1="${ENABLE_CSM_LOGIN_MODULE}" arg2="true" casesensitive="false" trim="true" />
+					<equals arg1="${ENABLE_CSM_LOGIN_MODULE}" arg2="yes" casesensitive="false" trim="true" />
+				</or>
+			</not>
+			<equals arg1="${SECURITY_ENABLED}" arg2="true" casesensitive="false" trim="true" />
+		</and>
+	</condition>
+	<condition property="CSM_LOGIN_MODULE_END" value="${xml.comment.end}" else="">
+		<and>
+			<not>
+				<or>
+					<equals arg1="${ENABLE_CSM_LOGIN_MODULE}" arg2="true" casesensitive="false" trim="true" />
+					<equals arg1="${ENABLE_CSM_LOGIN_MODULE}" arg2="yes" casesensitive="false" trim="true" />
+				</or>
+			</not>
+			<equals arg1="${SECURITY_ENABLED}" arg2="true" casesensitive="false" trim="true" />
+		</and>
+	</condition>
 	
 	<!--***********************************************************************
 	*** Prepares the output directory structure
@@ -345,6 +393,9 @@
 		<mkdir dir="${build.jar.dir}"/>
 		<mkdir dir="${build.doc.dir}"/>
 		<mkdir dir="${package.dir}"/>
+		<mkdir dir="${package.client.server.dir}"/>
+		<mkdir dir="${package.client.jboss.dir}"/>
+		<mkdir dir="${package.client.tomcat.dir}"/>
 		<mkdir dir="${package.client.remote.dir}"/>
 		<mkdir dir="${package.client.remote.lib.dir}"/>
 		<mkdir dir="${package.client.remote.conf.dir}"/>
@@ -354,6 +405,9 @@
 		<mkdir dir="${package.client.ws.dir}"/>
 		<mkdir dir="${package.client.ws.lib.dir}"/>
 		<mkdir dir="${package.client.ws.conf.dir}"/>
+		<mkdir dir="${package.client.grid-jaas.dir}"/>
+		<mkdir dir="${package.client.grid-jaas.lib.dir}"/>
+		<mkdir dir="${package.client.grid-jaas.conf.dir}"/>
 	
 		<copy todir="${output.conf.dir}" overwrite="true">
 			<fileset dir="${conf.dir}">
@@ -445,6 +499,15 @@
 			<replacefilter token="@CLM_DB_PASSWORD@" value="${CLM_DB_PASSWORD}" />	
 			<replacefilter token="@CLM_PROJECT_NAME@" value="${CLM_PROJECT_NAME}" />
 			<replacefilter token="@HIBERNATE_SHOW_SQL@" value="${HIBERNATE_SHOW_SQL}" />
+			
+			<replacefilter token="@CAGRID_AUTHENTICATION_SERVICE_URL@" value="${CAGRID_AUTHENTICATION_SERVICE_URL}" />
+			<replacefilter token="@CAGRID_DORIAN_SERVICE_URL@" value="${CAGRID_DORIAN_SERVICE_URL}" />
+			<replacefilter token="@SDK_GRID_LOGIN_SERVICE_URL@" value="${SDK_GRID_LOGIN_SERVICE_URL}" />
+			<replacefilter token="@CAGRID_LOGIN_MODULE_NAME@" value="${CAGRID_LOGIN_MODULE_NAME}" />
+			<replacefilter token="${xml.comment.start}@GRID_LOGIN_MODULE_START@${xml.comment.end}" value="${GRID_LOGIN_MODULE_START}"/>
+			<replacefilter token="${xml.comment.start}@GRID_LOGIN_MODULE_END@${xml.comment.end}" value="${GRID_LOGIN_MODULE_END}"/>
+			<replacefilter token="${xml.comment.start}@CSM_LOGIN_MODULE_START@${xml.comment.end}" value="${CSM_LOGIN_MODULE_START}"/>
+			<replacefilter token="${xml.comment.start}@CSM_LOGIN_MODULE_END@${xml.comment.end}" value="${CSM_LOGIN_MODULE_END}"/>
 		</replace>
 		<copy todir="${output.src.dir}" file="${system.config.security.dir}/${csm.ehcache.file}"/>
 		<copy tofile="${output.src.dir}/${csm.security.config.file}" file="${system.config.security.dir}/${csm.security.config.original.file}"/>
@@ -471,6 +534,8 @@
 		<ant antfile="${codegen.validator.dir}\build.xml" target="clean-all" inheritall="false" inheritrefs="false" />
 		<ant antfile="${system.dir}\build.xml"  target="clean-all" inheritall="false" inheritrefs="false" />
 		<ant antfile="${writable-api.dir}\build.xml"  target="clean-all" inheritall="false" inheritrefs="false" />
+		<ant antfile="${grid-remoting.dir}\build.xml"  target="clean-all" inheritall="false" inheritrefs="false" />
+		<ant antfile="${grid-jaas.dir}\build.xml"  target="clean-all" inheritall="false" inheritrefs="false" />
 	</target>
 
 	<!--***********************************************************************
@@ -523,7 +588,7 @@
 	</target>
 
 	<target name="prepare-condition-writable-api" >
-		<SDKecho message="${ant.project.name}: Checking the condition for system project build"/>
+		<SDKecho message="${ant.project.name}: Checking the condition for writable api project build"/>
 		<condition property="prepare-required-writable-api">
 			<and>
 				<not><available file="${writable-api.dir}/${writable-api.dist.dir}/${writable-api.file.output.core.writable.name}"/></not>
@@ -537,7 +602,36 @@
 		<ant antfile="${writable-api.dir}\build.xml" target="dist" inheritall="false" inheritrefs="false" />
 	</target>
 	
-	<target name="prepare" depends="prepare-codegen,prepare-system,prepare-writable-api"/>
+	<target name="prepare-condition-grid-remoting" >
+		<SDKecho message="${ant.project.name}: Checking the condition for grid-remoting project build"/>
+		<condition property="prepare-required-grid-remoting">
+			<and>
+				<not><available file="${grid-remoting.dir}/${grid-remoting.dist.dir}/${grid-remoting.file.output.remoting.name}"/></not>
+			</and>
+		</condition>
+	</target>
+
+	<target name="prepare-grid-remoting" depends="prepare-condition-grid-remoting" if="prepare-required-grid-remoting">
+		<SDKecho message="${ant.project.name}: Preparing the grid-remoting project"/>
+		<ant antfile="${grid-remoting.dir}\build.xml" target="dist" inheritall="false" inheritrefs="false" />
+	</target>
+
+	<target name="prepare-condition-grid-jaas" >
+		<SDKecho message="${ant.project.name}: Checking the condition for grid-jaas project build"/>
+		<condition property="prepare-required-grid-jaas">
+			<and>
+				<not><available file="${grid-jaas.dir}/${grid-jaas.dist.dir}/${grid-jaas.file.output.jaas.name}"/></not>
+				<not><available file="${grid-jaas.dir}/${grid-jaas.dist.dir}/${grid-jaas.file.output.jaas.executor.name}"/></not>
+			</and>
+		</condition>
+	</target>
+
+	<target name="prepare-grid-jaas" depends="prepare-condition-grid-jaas" if="prepare-required-grid-jaas">
+		<SDKecho message="${ant.project.name}: Preparing the grid-jaas project"/>
+		<ant antfile="${grid-jaas.dir}\build.xml" target="dist" inheritall="false" inheritrefs="false" />
+	</target>
+
+	<target name="prepare" depends="prepare-codegen,prepare-system,prepare-writable-api,prepare-grid-remoting,prepare-grid-jaas"/>
 
 	<!--***********************************************************************
 	*** Runs the Hibernate Validator Code Generator 
@@ -579,7 +673,7 @@
 	<!--***********************************************************************
 	*** Packages the generated artifacts 
 	*********************************************************************** -->
-	<target name="package-codegen-artifacts" depends="compile-beans, prepare-system,prepare-writable-api" description="Packages the generated ORM and bean artifacts">
+	<target name="package-codegen-artifacts" depends="codegen,compile-beans" description="Packages the generated ORM and bean artifacts">
 		<SDKecho message="${ant.project.name}: Packaging the generated artifacts"/>
 		<jar destfile="${build.jar.dir}\${bean.file}" basedir="${build.classes.dir}">
 			<manifest>
@@ -598,11 +692,11 @@
 		</jar>
 	</target>
 
-	<target name="package-system" depends="package-remote-client,package-local-client,package-webapp,package-ws-client" description="Packages the system">
+	<target name="package-system" depends="prepare,package-remote-client,package-local-client,package-webapp,package-ws-client,package-grid-jaas-client,package-grid-login-service,package-server-lib" description="Packages the system">
 		<SDKecho message="${ant.project.name}: Packaging the system artifacts"/>
 	</target>	
 
-	<target name="package-remote-client" depends="package-codegen-artifacts">
+	<target name="package-remote-client" depends="prepare,package-codegen-artifacts">
 		<SDKecho message="${ant.project.name}: Packaging the remote client"/>
 
 		<copy todir="${package.client.remote.conf.dir}">
@@ -618,6 +712,7 @@
 			<fileset dir="${writable-api.dir}\${writable-api.dist.dir}" includes="*.jar">
 				<exclude name="${read-api-exclude-list-remote-client}"/>
 			</fileset>
+			<fileset dir="${grid-remoting.dir}\${grid-remoting.dist.dir}" includes="*.jar"/>
 			
 			<fileset dir="${system.dir}\${system.lib.dir}">
 				<include name="${system.file.output.client.name}"/>
@@ -641,7 +736,7 @@
 		</copy>
 	</target>
 
-	<target name="package-local-client" depends="package-codegen-artifacts">
+	<target name="package-local-client" depends="prepare,package-codegen-artifacts">
 		<SDKecho message="${ant.project.name}: Packaging the local client"/>
 		<copy todir="${package.client.local.lib.dir}">
 			<fileset dir="${system.dir}\${system.dist.dir}">
@@ -673,6 +768,8 @@
 				<include name="mysql*.*"/>
 				<include name="ojdbc*.*"/>
 				<include name="spring*.*"/>
+				<include name="cog-jglobus*.*"/>
+				<include name="cog-axis*.*"/>
 			</fileset>
 			<fileset dir="${build.jar.dir}" includes="${bean.file}" />
 			<fileset dir="${build.jar.dir}" includes="${orm.file}" />
@@ -693,7 +790,7 @@
 		</copy>
 	</target>	
 
-	<target name="package-webapp" depends="package-codegen-artifacts">
+	<target name="package-webapp" depends="prepare,package-codegen-artifacts">
 		<SDKecho message="${ant.project.name}: Packaging the webapp"/>
 		<war destfile="${package.system.dir}\${PROJECT_NAME}.war" webxml="${build.conf.web-inf.dir}\web.xml">
 			<manifest>
@@ -710,7 +807,10 @@
 				<exclude name="servlet.jar"/>
 				<exclude name="commons-logging*.*"/>
 				<exclude name="xercesImpl*.*"/>
+
+				<exclude name="cog*.*"/>
 			</lib>
+			<lib dir="${grid-jaas.dir}\${grid-jaas.dist.dir}" includes="*.*" />
 			<fileset dir="${build.conf.system.web.dir}">
 				<include name="**/*"/>
 				<exclude name="**/web.xml"/>
@@ -732,8 +832,33 @@
 			</webinf>
 		</war>
 	</target>	
+
+	<target name="package-grid-login-service" depends="prepare">
+		<SDKecho message="${ant.project.name}: Packaging the Grid Login Service application"/>
+		<war destfile="${package.system.dir}\${SDK_GRID_LOGIN_SERVICE_NAME}.war" webxml="${system.config.grid.loginService.webinf.dir}\web.xml">
+			<manifest>
+				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
+			</manifest>
+			<lib dir="${grid-jaas.dir}\${grid-jaas.lib.dir}" includes="*.jar">
+				<exclude name="${server-exclude-list}"/>
+				<exclude name="commons-logging*.*"/>				
+
+				<exclude name="cog-jglobus*.*"/>				
+				<exclude name="cog-tomcat*.*"/>				
+				<exclude name="cryptix*.*"/>				
+				<exclude name="jce-jdk*.*"/>				
+				<exclude name="puretls*.*"/>
+				<exclude name="xml-api*.*"/>				
+			</lib>
+			<lib dir="${grid-jaas.dir}\${grid-jaas.dist.dir}" includes="*.jar"/>
+			<fileset dir="${system.config.grid.loginService.dir}">
+				<include name="**/*"/>
+				<exclude name="**/web.xml"/>
+			</fileset>
+		</war>
+	</target>	
 	
-	<target name="package-ws-client" depends="package-codegen-artifacts">
+	<target name="package-ws-client" depends="prepare,package-codegen-artifacts">
 		<SDKecho message="${ant.project.name}: Packaging the Web Service client"/>
 		<copy todir="${package.client.ws.lib.dir}">
 			<fileset dir="${system.dir}\${system.lib.dir}">
@@ -749,6 +874,72 @@
 		<copy todir="${package.client.ws.dir}">
 			<fileset dir="${system.config.client.ws.dir}"/>
 		</copy>
+	</target>	
+
+	<target name="package-grid-jaas-client" depends="prepare">
+		<SDKecho message="${ant.project.name}: Packaging the Grid JAAS Module"/>
+		<copy todir="${package.client.grid-jaas.lib.dir}">
+			<fileset dir="${grid-jaas.dir}\${grid-jaas.lib.dir}"/>
+			<fileset dir="${grid-jaas.dir}\${grid-jaas.dist.dir}"/>
+		</copy>
+		<copy todir="${package.client.grid-jaas.dir}">
+			<fileset dir="${system.config.client.grid-jaas.dir}"/>
+		</copy>
+		<copy todir="${package.client.grid-jaas.conf.dir}">
+			<fileset dir="${system.config.grid.loginService.web.classes.dir}" includes="*.*"/>
+		</copy>
+		
+	</target>	
+		
+	<target name="package-server-lib" depends="init">
+		<SDKecho message="${ant.project.name}: Packaging the server libraries"/>
+		<mkdir dir="${package.client.jboss.dir}/server/default/lib"/>
+		
+		<copy todir="${package.client.jboss.dir}/server/default/lib">
+			<fileset dir="${grid-jaas.dir}\${grid-jaas.lib.dir}">
+				<include name="cog-jglobus*.*"/>
+				<include name="cog-axis*.*"/>
+				<include name="cryptix*.*"/>
+				<include name="jce-jdk*.*"/>
+				<include name="puretls*.*"/>
+				<include name="xml-apis*.*"/>
+			</fileset>
+			<fileset dir="${system.dir}\${system.lib.dir}">
+				<include name="ojdbc*.*"/>
+				<include name="mysql*.*"/>
+			</fileset>
+		</copy>
+		
+		<mkdir dir="${package.client.tomcat.dir}/common/endorsed"/>
+		<mkdir dir="${package.client.tomcat.dir}/common/lib"/>
+		<mkdir dir="${package.client.tomcat.dir}/server/lib"/>
+		<copy todir="${package.client.tomcat.dir}/common/endorsed">
+			<fileset dir="${grid-jaas.dir}\${grid-jaas.lib.dir}">
+				<include name="xalan*.*"/>
+			</fileset>
+		</copy>
+		<copy todir="${package.client.tomcat.dir}/common/lib">
+			<fileset dir="${grid-jaas.dir}\${grid-jaas.lib.dir}">
+				<include name="cog-jglobus*.*"/>
+				<include name="cog-axis*.*"/>
+				<include name="cryptix*.*"/>
+				<include name="jce-jdk*.*"/>
+				<include name="puretls*.*"/>
+				<include name="xml-apis*.*"/>
+				<include name="jgss*.*"/>
+				<include name="log4j*.*"/>
+			</fileset>
+			<fileset dir="${system.dir}\${system.lib.dir}">
+				<include name="ojdbc*.*"/>
+				<include name="mysql*.*"/>
+			</fileset>
+		</copy>
+	<copy todir="${package.client.tomcat.dir}/server/lib">
+		<fileset dir="${grid-jaas.dir}\${grid-jaas.lib.dir}">
+			<include name="cog-tomcat*.*"/>
+		</fileset>
+	</copy>
+		
 	</target>	
 	
 	<!--***********************************************************************
