--- a/SDK4/build.xml
+++ b/SDK4/build.xml
@@ -729,6 +729,8 @@
 				<include name="castor*.*"/>
 				<include name="xercesImpl*.*"/>
 				<include name="caGrid*.*"/>
+				<include name="cog-jglobus*.*"/>
+				<include name="cog-axis*.*"/>
 			</fileset>
 			<fileset dir="${build.jar.dir}" includes="${bean.file}" />
 		</copy>
@@ -809,6 +811,7 @@
 				<exclude name="servlet.jar"/>
 				<exclude name="commons-logging*.*"/>
 				<exclude name="xercesImpl*.*"/>
+
 				<exclude name="cog*.*"/>
 			</lib>
 			<lib dir="${grid-jaas.dir}\${grid-jaas.dist.dir}" includes="*.*" />
