Added JNDI property for grid
SVN-Revision: 2305

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -98,3 +98,5 @@ extension.sdk.security.writable.applicationservice.method.impl=gov.nih.nci.syste
 HBM2DDL_ENABLED=false
 HBM2DDL_TYPE=validate
 HIBERNATE_SHOW_SQL=false
+
+GRID_JNDI_NAME=SDKGridSecurityMap
