Changed the URL for the Authentication and Dorian service to use training grid
SVN-Revision: 2312

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -289,8 +289,8 @@ CACHE_PATH=java.io.tmpdir
 #  CAGRID AUTHENTICATION PROPERTIES
 #
 ##################################################################################
-CAGRID_AUTHENTICATION_SERVICE_URL=https://localhost:18443/wsrf/services/cagrid/Dorian
-CAGRID_DORIAN_SERVICE_URL=https://localhost:18443/wsrf/services/cagrid/Dorian
+CAGRID_AUTHENTICATION_SERVICE_URL=https://dorian.training.cagrid.org:8443/wsrf/services/cagrid/Dorian
+CAGRID_DORIAN_SERVICE_URL=https://dorian.training.cagrid.org:8443/wsrf/services/cagrid/Dorian
 SDK_GRID_LOGIN_SERVICE_NAME=SDKGridLoginService
 SDK_GRID_LOGIN_SERVICE_URL=http://localhost:8080/${SDK_GRID_LOGIN_SERVICE_NAME}
 ENABLE_GRID_LOGIN_MODULE=false
