--- a/SDK4/junit/build.properties
+++ b/SDK4/junit/build.properties
@@ -1,3 +1,7 @@
+grid-jaas.dir=${sdk.home}/${sdk.package.client.grid.jaas.dir}
+grid-jaas.conf.dir=${sdk.home}/${sdk.package.client.grid.jaas.conf.dir}
+grid-jaas.lib.dir=${sdk.home}/${sdk.package.client.grid.jaas.lib.dir}
+
 thick-client.dir=${sdk.home}/${sdk.package.client.local.dir}
 thick-client.conf.dir=${sdk.home}/${sdk.package.client.local.conf.dir}
 thick-client.lib.dir=${sdk.home}/${sdk.package.client.local.lib.dir}
