Added grid-jaas entries
SVN-Revision: 2318

--- a/SDK4/junit/build.properties
+++ b/SDK4/junit/build.properties
@@ -1,6 +1,6 @@
-grid-jaas.dir=${sdk.home}/${sdk.package.client.grid.jaas.dir}
-grid-jaas.conf.dir=${sdk.home}/${sdk.package.client.grid.jaas.conf.dir}
-grid-jaas.lib.dir=${sdk.home}/${sdk.package.client.grid.jaas.lib.dir}
+grid-jaas.dir=${sdk.home}/${sdk.package.client.grid-jaas.dir}
+grid-jaas.conf.dir=${sdk.home}/${sdk.package.client.grid-jaas.conf.dir}
+grid-jaas.lib.dir=${sdk.home}/${sdk.package.client.grid-jaas.lib.dir}
 
 thick-client.dir=${sdk.home}/${sdk.package.client.local.dir}
 thick-client.conf.dir=${sdk.home}/${sdk.package.client.local.conf.dir}
