--- a/SDK4/build.xml
+++ b/SDK4/build.xml
@@ -709,6 +709,7 @@
 		<copy todir="${package.client.remote.lib.dir}">
 			<fileset dir="${system.dir}\${system.dist.dir}">
 				<include name="${system.file.output.client.name}"/>
+				<include name="${security.file.output.security.name}"/>
 			</fileset>
 			<fileset dir="${writable-api.dir}\${writable-api.dist.dir}" includes="*.jar">
 				<exclude name="${read-api-exclude-list-remote-client}"/>
@@ -732,6 +733,9 @@
 				<include name="caGrid*.*"/>
 				<include name="cog-jglobus*.*"/>
 				<include name="cog-axis*.*"/>
+				<include name="axis*.*"/>
+				<include name="jaxrpc*.*"/>
+				<include name="commons-discovery*.*"/>
 			</fileset>
 			<fileset dir="${build.jar.dir}" includes="${bean.file}" />
 		</copy>
@@ -775,6 +779,9 @@
 				<include name="cog-jglobus*.*"/>
 				<include name="cog-axis*.*"/>
 				<include name="caGrid*.*"/>
+				<include name="axis*.*"/>
+				<include name="jaxrpc*.*"/>
+				<include name="commons-discovery*.*"/>
 			</fileset>
 			<fileset dir="${build.jar.dir}" includes="${bean.file}" />
 			<fileset dir="${build.jar.dir}" includes="${orm.file}" />
