--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -115,46 +115,33 @@ SERVER_URL=http://localhost:8080/${PROJECT_NAME}
 #  DATA_MODEL: specifies the name of the base package within the object/data model
 #  that contains the data model data.
 #
-#  INCLUDE_PACKAGE: specifies the name pattern of the parent package within the 
-#  object/data model that should be processed by the code generator.
+#  INCLUDE_PACKAGE: specifies the regular expression (java.util.regex) pattern(s) 
+#  of any packages within the object/data model that should be processed by the code 
+#  generator. Separate patterns with a comma (',') as a delimiter.
 #
-#  EXCLUDE_PACKAGE: specifies the name pattern of the parent package within the 
-#  object/data model that should be ignored (not processed) by the code generator.
-
-#  EXCLUDE_NAME: specifies the name pattern of the class(es) within the object/
-#  data model that should be ignored (not processed) by the code generator.
+#  EXCLUDE_PACKAGE: specifies the regular expression (java.util.regex) pattern(s) of any 
+#  packages within the object/data model that should be ignored (not processed) by the 
+#  code generator.  Separate patterns with a comma (',') as a delimiter.
 #
-#  EXCLUDE_NAMESPACE: specifies the complete namespace of the UML Packages within the object/
-#  data model that should be ignored (not processed) by the code generator.
+#  EXCLUDE_NAME: specifies the regular expression (java.util.regex) pattern(s) of the 
+#  class(es) within the object/data model that should be ignored (not processed) by 
+#  the code generator.  Separate patterns with a comma (',') as a delimiter.
 #
-#  NOTE:  At this time, the EXCLUDE_PACKAGE, EXCLUDE_NAME, EXCLUDE_NAMESPACE properties 
-#         only work with a simple string containing one or more class/package name entries  
-#         separated by a comma (",").  I.e., no wildcard or regular expressions 
-#         are accepted/understood by the Code Generator parser.  Class/package  
-#         names need to be fully qualified, and are also case-sensitive. 
-# 
-#         Also, classes cannot be excluded if they have an association to other 
-#         class(es) that are not excluded, or if they are a parent class in a 
-#         generalization (inheritance) relationship with other class(es) that are 
-#         not excluded.
+#  EXCLUDE_NAMESPACE: specifies the regular expression (java.util.regex) namespace 
+#  pattern of the UML Packages within the object/data model that should be ignored 
+#  (not processed) by the code generator.  Separate patterns with a comma (',')
+#  as a delimiter.
 #
-#         As an example, given the presence of the following classes within the UML 
-#         model:
-#
-#             * gov.nih.nci.cacoresdk.domain.interfaze.Dog
-#             * gov.nih.nci.cacoresdk.domain.inheritance.implicit.FreshwaterFishTank
-#             * gov.nih.nci.cacoresdk.domain.inheritance.implicit.Fish
-#
-#         and the following deploy.properties EXCLUDE_NAME setting:
-#
-#             EXCLUDE_NAME=gov.nih.nci.cacoresdk.domain.interfaze.Dog,FreshwaterFishTank,
-#             freshwaterfishtank,gov.nih.nci.cacoresdk.domain.inheritance.implicit.AngelFish
-#
-#         the SDK Code Generator would successfully exclude (skip generation of)
-#         artifacts for the Dog and Fish classes, but would not exclude generation
-#         of artifacts for the FreshwaterFishTank class as the first entry is not 
-#         fully qualified, and the second entry is neither fully qualified, nor
-#         does the case match.
+#  NOTE:  As of SDK 4.1, The INCLUDE and EXCLUDE properties above now use java.util.regex 
+#		  patterns.  For details on creating regular expression patterns, see 
+#         http://java.sun.com/j2se/1.4.2/docs/api/java/util/regex/Pattern.html. 
+#		    
+#         Also, patterns are matched against the fully qualified class name 
+#         (or namespace in the case of the EXCLUDE_NAMESPACE property), so be sure 
+#         to use patterns that take this into account.  As an example, the 
+#         INCLUDE_PACKAGE used to have a default value of 'domain', it has now been 
+#         changed to '.*?domain.*' so that it matches classes found in packages such
+#         as gov.nih.nci.cacoresdk.domain.inheritance.abstrakt.Pupil.
 #
 ##################################################################################
 #MODEL_FILE=sdk.uml
@@ -164,7 +151,7 @@ MODEL_FILE_TYPE=EA
 
 LOGICAL_MODEL=Logical View.Logical Model
 DATA_MODEL=Logical View.Data Model
-INCLUDE_PACKAGE=domain
+INCLUDE_PACKAGE=.*?domain.*
 EXCLUDE_PACKAGE=
 EXCLUDE_NAME=
 EXCLUDE_NAMESPACE=
