Fix for:  [#16581] Include/exclude Properties should allow Regular Expression (regex) Patterns.
Change in comment.


SVN-Revision: 2331

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -141,7 +141,7 @@ SERVER_URL=http://localhost:8080/${PROJECT_NAME}
 #         to use patterns that take this into account.  As an example, the 
 #         INCLUDE_PACKAGE used to have a default value of 'domain', it has now been 
 #         changed to '.*?domain.*' so that it matches classes found in packages such
-#         as gov.nih.nci.cacoresdk.domain.inheritance.abstrakt.Pupil.
+#         as gov.nih.nci.cacoresdk.domain.inheritance.abstrakt.*.
 #
 ##################################################################################
 #MODEL_FILE=sdk.uml
