Modification/completion of Comments.  Still need comments for Grid properties
SVN-Revision: 2348

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -19,7 +19,7 @@
 #          <<Classification Scheme Version>>/<<<Classification Scheme Item> (Optional)>>
 #
 #  NOTE:  If XSDs are to be used for the caGRID, the value of the NAMESPACE_PREFIX 
-#  should be the same as the GME namespace
+#  should be the same as the GME namespace value.
 # 
 #  WEBSERVICE_NAME: used to create the:
 #		1) Web service name in the Web Services deployment descriptor (WSDD). 
@@ -34,11 +34,12 @@ WEBSERVICE_NAME=${PROJECT_NAME}Service
 ##################################################################################
 #  PROJECT SECURITY PROPERTIES
 #
-#  CSM_PROJECT_NAME: used as a prefix when creating the:
-#		1) CSM security configuration file name
-#
-#  NOTE:  CSM_PROJECT_NAME valued must  match the Application name used when
-#         setting up security using CSM's UPT
+#  ENABLE_SECURITY: Used to enable or disable security within the generated system 
+#  during code generation.  This applies to all of the SDK interfaces, including:
+#	1) Web Interface (GUI)
+#	2) Java API Interface (local and remote clients)
+#	3) Writable API
+#	4) Web Service Interface
 #
 #  ENABLE_INSTANCE_LEVEL_SECURITY: used to enable/disable CSM instance level security.
 #  Only relevant if SECURITY_ENABLED property is set to 'true'.
@@ -46,43 +47,51 @@ WEBSERVICE_NAME=${PROJECT_NAME}Service
 #  ENABLE_ATTRIBUTE_LEVEL_SECURITY: used to enable/disable CSM attribute level
 #  security.  Only relevant if SECURITY_ENABLED property is set to 'true'.
 #
+#  CSM_PROJECT_NAME: used as a prefix when creating the:
+#		1) CSM security configuration file name
+#
+#  NOTE:  CSM_PROJECT_NAME value must match the project application name used when
+#         setting up security using CSM's UPT
+#
 #  CACHE_PROTECTION_ELEMENTS: indicates whether or not CSM Protection Elements
 #  should be cached
-#
 ##################################################################################
 ENABLE_SECURITY=false
-CSM_PROJECT_NAME=${PROJECT_NAME}
 ENABLE_INSTANCE_LEVEL_SECURITY=false
 ENABLE_ATTRIBUTE_LEVEL_SECURITY=false
+CSM_PROJECT_NAME=${PROJECT_NAME}
 CACHE_PROTECTION_ELEMENTS=false
 
 ##################################################################################
 #  WRITABLE API PROPERTIES
 # 
 #  ENABLE_WRITABLE_API_EXTENSION: if set to "true" or "yes", will change the
-#  service interface and corresponding implementation for the Writable API
+#  service interface and corresponding implementation for the Writable API.
+#  Only relevant if the Writable API extension is enabled.
 #
 #  DATABASE_TYPE: A suffix appended to certain tag value keys (e.g., 
 #  NCI_GENERATOR.<database-type>, NCI_GENERATOR_PROPERTY.<database-type>) added
 #  to the primary key columns within the UML model.  The tag values are used by  
 #  the Hibernate Mapping file transformer to generate primary key settings for a 
 #  given class.  The database-type suffix is necessary when supporting multiple 
-#  databases through the same UML model.
+#  databases through the same UML model.  Only relevant if the Writable API 
+#  extension is enabled.
 #
 #  IDENTITY_GENERATOR_TAG:  if using system-wide primary key generator settings,
-#  the value for the primary key generator class.
+#  the value for the primary key generator class.  Only relevant if the Writable 
+#  API extension is enabled.
 #
 #  CADSR_CONNECTION_URL: if set, will override the default connection provided in 
 #  the caDSR application-config-client.xml file, located under 
 #  /conf/codegen/validator. Used when generating Hibernate Validator 
 #  annotations containing caDSR Permissible Value enumeration(s) for a given 
-#  domain object attribute.
+#  domain object attribute.  Only relevant if the Writable API extension is enabled.
 #  
-#  ENABLE_COMMON_LOGGING_MODULE:  if "yes" or "true", will enable the Common
+#  ENABLE_COMMON_LOGGING_MODULE:  if set to "true" or "yes", will enable the Common
 #  Logging Module (CLM).  Only valid if the Writable API extension is enabled.
 #
-#  CLM_PROJECT_NAME: Value will be used to populated the CLM logging table 
-#  (LOG_MESSAGE) application column. Only valid if CLM is enabled.
+#  CLM_PROJECT_NAME: used to populated the CLM logging table (LOG_MESSAGE) 
+#  application column. Only valid if CLM and the Writable API are both enabled.
 ##################################################################################
 ENABLE_WRITABLE_API_EXTENSION=false
 DATABASE_TYPE=oracle
@@ -94,8 +103,17 @@ CLM_PROJECT_NAME=${PROJECT_NAME}
 ################################################################################## 
 #  APPLICATION SERVER PROPERTIES
 #
-#  SERVER_TYPE if set to jboss will exclude log4j.jar from the war file. 
-#              Any other value will include the log4j.jar in the war file
+#  SERVER_TYPE Used to include/exclude the log4j.jar file during the war file 
+#  packaging.  If set to 'jboss' will exclude log4j.jar from the war file, as the 
+#  JBoss server already has its own instance of the log4j.jar file.  Any other 
+#  value will include the log4j.jar in the war file.  Valid values are 'jboss' if 
+#  deploying to a JBoss server, and 'other' if deploying to any other type of 
+#  Servlet container such as Apache Tomcat.
+#
+#  SERVER_URL  The URL (including the application context) of the deployed 
+#  application.  Used as part of the URL that specifies the location of the 
+#  deployed Web Service.  I.e., the following pattern is used when undeploying the 
+#  Web Service from the server: ${SERVER_URL}/services/${WEBSERVICE_NAME}Service
 ##################################################################################
 SERVER_TYPE=other
 SERVER_URL=http://localhost:8080/${PROJECT_NAME}
@@ -104,7 +122,8 @@ SERVER_URL=http://localhost:8080/${PROJECT_NAME}
 #  MODEL PROPERTIES
 #
 #  MODEL_FILE: specifies the name of the file which contains the object/data  
-#  model.  The file is to be placed under the models directory.
+#  model.  SDK users should modify this property to reflect their own model file 
+#  name.  The file must be placed under the \models directory.
 #
 #  MODEL_FILE_TYPE: specifies whether the object/data model file was created
 #  using Enterprise Architect (EA) or ArgoUML (ARGO).
@@ -116,23 +135,26 @@ SERVER_URL=http://localhost:8080/${PROJECT_NAME}
 #  that contains the data model data.
 #
 #  INCLUDE_PACKAGE: specifies the regular expression (java.util.regex) pattern(s) 
-#  of any packages within the object/data model that should be processed by the code 
-#  generator. Separate patterns with a comma (',') as a delimiter.
+#  of any fully qualified package names within the object/data model that should be 
+#  processed by the code generator. Separate patterns with a comma (',') as a delimiter.
 #
-#  EXCLUDE_PACKAGE: specifies the regular expression (java.util.regex) pattern(s) of any 
-#  packages within the object/data model that should be ignored (not processed) by the 
-#  code generator.  Separate patterns with a comma (',') as a delimiter.
+#  EXCLUDE_PACKAGE: specifies the regular expression (java.util.regex) pattern(s) of  
+#  the fully qualified package name(s) within the object/data model that should be 
+#  ignored (not processed) by the code generator.  Use a comma (',') as a delimiter to 
+#  separate patterns.  Note:  All packages are first filtered/constrained by the 
+#  INCLUDE_PACKAGE property value, and then further filtered by the EXCLUDE_PACKAGE value.
 #
 #  EXCLUDE_NAME: specifies the regular expression (java.util.regex) pattern(s) of the 
-#  class(es) within the object/data model that should be ignored (not processed) by 
-#  the code generator.  Separate patterns with a comma (',') as a delimiter.
+#  fully qualified class name(s) within the object/data model that should be ignored 
+#  (not processed) by the code generator.  Use a comma (',') as a delimiter to separate 
+#  patterns.
 #
 #  EXCLUDE_NAMESPACE: specifies the regular expression (java.util.regex) namespace 
-#  pattern of the UML Packages within the object/data model that should be ignored 
-#  (not processed) by the code generator.  Separate patterns with a comma (',')
-#  as a delimiter.
+#  pattern of the fully qualified package name(s)  within the object/data model that 
+#  should be ignored (not processed) by the code generator.  Use a comma (',') as a 
+#  delimiter to separate patterns.
 #
-#  NOTE:  As of SDK 4.01, The INCLUDE and EXCLUDE properties above now use java.util.regex 
+#  NOTE:  As of SDK 4.1, The INCLUDE and EXCLUDE properties above now use java.util.regex 
 #		  patterns.  For details on creating regular expression patterns, see 
 #         http://java.sun.com/j2se/1.4.2/docs/api/java/util/regex/Pattern.html. 
 #		    
@@ -142,7 +164,6 @@ SERVER_URL=http://localhost:8080/${PROJECT_NAME}
 #         INCLUDE_PACKAGE used to have a default value of 'domain', it has now been 
 #         changed to '.*?domain.*' so that it matches classes found in packages such
 #         as gov.nih.nci.cacoresdk.domain.inheritance.abstrakt.*.
-#
 ##################################################################################
 #MODEL_FILE=sdk.uml
 #MODEL_FILE_TYPE=ARGO
@@ -159,8 +180,9 @@ EXCLUDE_NAMESPACE=
 ##################################################################################
 #  DATABASE CONNECTION PROPERTIES
 # 
-#  USE_JNDI_BASED_CONNECTION:  If set to "true" or "yes", DB_JNDI_URL is used to   
-#  obtain the connection and get data.  If set to "no" then DB_DRIVER,  
+#  USE_JNDI_BASED_CONNECTION:  Indicates whether or not a JNDI DB Connection should 
+#  be used for the application database. If set to "true" or "yes", DB_JNDI_URL is 
+#  used to obtain the connection and get data.  If set to "no" then DB_DRIVER,  
 #  DB_CONNECTION_URL, DB_USERNAME and DB_PASSWORD are used instead to initialize 
 #  the connection and get data.
 #
@@ -177,17 +199,19 @@ DB_DRIVER=oracle.jdbc.driver.OracleDriver
 DB_DIALECT=org.hibernate.dialect.OracleDialect
 
 ##################################################################################
-#  SECURITY DATABASE CONNECTION PROPERTIES
+#  CSM SECURITY DATABASE CONNECTION PROPERTIES
 #
-#  USE_JNDI_BASED_CONNECTION:  If set to "true" or "yes" then DB_JNDI_URL is used  
-#  to obtain  the connection and get data.  If set to "no" then DB_DRIVER,  
-#  DB_CONNECTION_URL, DB_USERNAME and DB_PASSWORD are used instead to initialize  
-#  the connection and get data.
+#  USE_JNDI_BASED_CONNECTION:  If set to "true" or "yes" then CSM_DB_JNDI_URL is   
+#  used to obtain  the connection and get data.  Otherwise, CSM_DB_DRIVER,  
+#  CSM_DB_CONNECTION_URL, CSM_DB_USERNAME and CSM_DB_PASSWORD are used instead to   
+#  initialize the connection and get data.  By default, will use the same value as 
+#  the application's USE_JNDI_BASED_CONNECTION property.
 #
 #  CSM_DB_DIALECT: used by the Hibernate to prepare the database specific queries.
+#  By default, will use the same value as the application's DB_DIALECT property.
 #
-#  If you are using instance level security then the CSM tables are required to be 
-#  present in the same schema the domain object resides in
+#  NOTE:  If you are using instance level security then the CSM tables are required  
+#  to be present in the same schema the domain table objects resides in
 ##################################################################################
 CSM_USE_JNDI_BASED_CONNECTION=${USE_JNDI_BASED_CONNECTION}
 CSM_DB_JNDI_URL=${DB_JNDI_URL}
@@ -200,8 +224,7 @@ CSM_DB_DRIVER=${DB_DRIVER}
 CSM_DB_DIALECT=${DB_DIALECT}
 
 ##################################################################################
-#  LOGGING DATABASE CONNECTION PROPERTIES
-#
+# COMMON LOGGING MODULE (CLM) DATABASE CONNECTION PROPERTIES
 ##################################################################################
 CLM_DB_CONNECTION_URL=${DB_CONNECTION_URL}
 CLM_DB_USERNAME=${DB_USERNAME}
@@ -209,10 +232,8 @@ CLM_DB_PASSWORD=${DB_PASSWORD}
 CLM_DB_DRIVER=${DB_DRIVER}
 
 ##################################################################################
-##################################################################################
 #  CODE GENERATION OPTIONS
-##################################################################################
-##################################################################################
+#
 #  The following properties are used to enable or disable code generation step(s). 
 #  These properties accept values of either 'true' or 'false'. Setting the value 
 #  to 'false' for a component disables the code generation of that component, while
