Additional jars created for tomcat binder
SVN-Revision: 2364

--- a/SDK4/grid/grid-jaas/build.properties
+++ b/SDK4/grid/grid-jaas/build.properties
@@ -9,3 +9,4 @@ lib.dir=lib
 
 file.output.jaas.name=sdk-grid-jaas.jar
 file.output.jaas.executor.name=sdk-grid-jaas-executor.jar
+file.output.jaas.jndibinder.name=sdk-grid-jndi-binder.jar
