*** empty log message ***
SVN-Revision: 2366

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -37,6 +37,12 @@ output.codegen.validator.config.dir=${output.codegen.config.dir}/validator
 codegen.config.file=CodegenConfig.xml
 codegen.config.validator.file=ValidatorCodegenConfig.xml
 
+system.config.server.dir=${system.config.dir}/package/server
+system.config.server.serverxml.dir=${system.config.server.dir}/tomcat/conf
+system.config.server.context.dir=${system.config.server.dir}/tomcat/conf/Catalina/localhost
+file.project.Context=projectContext.xml
+file.grid.loginService.Context=gridLoginServiceProjectContext.xml
+
 system.config.grid.loginService.dir=${system.config.dir}/grid-login-service
 system.config.grid.loginService.webinf.dir=${system.config.grid.loginService.dir}/WEB-INF
 system.config.grid.loginService.web.classes.dir=${system.config.grid.loginService.webinf.dir}/classes
@@ -53,6 +59,10 @@ package.dir=${output.project.dir}/package
 package.client.server.dir=${package.dir}/server
 package.client.jboss.dir=${package.client.server.dir}/jboss
 package.client.tomcat.dir=${package.client.server.dir}/tomcat
+
+package.client.tomcat.serverxml.dir=${package.client.tomcat.dir}/conf
+package.client.tomcat.context.dir=${package.client.tomcat.dir}/conf/Catalina/localhost
+
 package.client.remote.dir=${package.dir}/remote-client
 package.client.remote.lib.dir=${package.client.remote.dir}/lib
 package.client.remote.conf.dir=${package.client.remote.dir}/conf
