--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -30,6 +30,7 @@
 PROJECT_NAME=example
 NAMESPACE_PREFIX=gme://caCORE.caCORE/3.2/
 WEBSERVICE_NAME=${PROJECT_NAME}Service
+VERSION=caCORE SDK 4.1
 
 ##################################################################################
 #  PROJECT SECURITY PROPERTIES
