--- a/SDK4/grid/grid-remoting/build.xml
+++ b/SDK4/grid/grid-remoting/build.xml
@@ -2,6 +2,9 @@
 <project name="Grid-Remoting" basedir="." default="dist">
 
 	<description>Build script for building the runtime system</description>
+		
+	<property name="sdk.home" value="../.." />
+	<property file="${sdk.home}/conf/deploy.properties" />
 
 	<!--***********************************************************************
 	*** Load the build properties from the file
@@ -83,6 +86,7 @@
 		<jar destfile="${dist.dir}\${file.output.remoting.name}" basedir="${build.classes.dir}">
 			<manifest>
 				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
+				<attribute name="Version" value="${VERSION}"/>
 			</manifest>
 			<include name="**/*"/>
 			<fileset dir="${src.dir}">
